<resources>
    <string name="app_name">MusicWiki</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_a_genere_to_start_with">Choose a genere to start with</string>
    <string name="welcome">Welcome!</string>
    <string name="music_wiki">MusicWiki</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="tracks">Tracks</string>
    <string name="genre">Genre</string>
    <string name="artist_name">Artist Name</string>
    <string name="by">by</string>
    <string name="title">Title</string>
    <string name="imageview">ImageView</string>
    <string name="album_name">Album Name</string>
    <string name="artist_name_album_info">Artist Name</string>
    <string name="genre_info_text">genre info text</string>
    <string name="artist_name_activity">Artist Name</string>
    <string name="artist_name2">Artist Name</string>
    <string name="artist_name3">Artist Name</string>
    <string name="top_albums">Top Albums</string>
    <string name="top_tracks">Top Tracks</string>
    <string name="listeners">Listeners</string>
    <string name="play_count">Play Count</string>
</resources>