<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".screens.activities.GenresInformationActivity">
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/genre_info_pb"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/genre_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Genre Name"
        android:textStyle="bold"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/genre_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        tools:text="genre info text"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:maxLines="3"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center">
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="scrollable"
            android:background="#ffffff"
            app:tabTextColor="#D0CBCB"
            app:tabSelectedTextColor="@color/black"
            app:tabIndicatorColor="@color/black"
            app:tabIndicatorHeight="3dp"
            app:tabIndicatorFullWidth="false"
            android:layout_gravity="center"
            app:tabGravity="center">
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/albums"
                />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artists"
                />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tracks" />
        </com.google.android.material.tabs.TabLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
</androidx.appcompat.widget.LinearLayoutCompat>